# Training_2024_2025

./: LICENSE  README.md  access token.txt  package-lock.json  student ranking.txt  todo 3 feb.txt
Bootstrap/: README.md  styles.css
Bootstrap/task-1/: README.md  index.html
Figjam/: README.md
Figjam/task-1/: README.md  area_of_circle.py  fact_1_to_5.py  max_of_x_y.py  max_of_x_y_z.py  param_rect.py  print_1!,-3!,5!,-7!,9!,...n.py  print_1!,3!,5!,7!,9!,...n.py  print_1,-2, 3,-4,5,-6,7,-8,...n.py  print_1,1,2,1,1,2,3,2,1,1,2,3,4,3,2,1,...n.py  print_1,1,2,1,2,3,1,2,3,4,...n.py  sin_funtion.py  sum_of_1_to_5.py
ds/: pattern.py
gherkin/cucumber_playwright/: couchbase.js  cucumber.js  cucumber.json  generateReport.js  index.js  mongodb.js  package-lock.json  package.json  playwright.config.js  tidb.js
gherkin/gherkin_nodejs/: Cucumber.js  (+4 more)
gherkin_nodejs/: Cucumber.js  index.js  package-lock.json  playwright.config.js
html/: README.md
js/: README.md
rust/: LICENSE  axum - api.txt
rust/axum-practice/: Cargo.toml  axum - api.txt
rust/axum-practice/src/: main.rs
rust/axum-practice/src/database/: connection.rs
rust/axum-practice/src/handlers/: features_handlers.rs  main_handler.rs  mod.rs
rust/axum-practice/src/middlewares/: add_id.rs  auth.rs  logger.rs  mod.rs
rust/axum-practice/src/models/: mod.rs
rust/axum-practice/src/router/: routes.rs
rust/axum/rust_middleware/: Cargo.toml
rust/axum/rust_middleware/src/: main.rs
rust/axum/rust_middleware/src/middlewares/: auth.rs
rust/axum/rust_middleware/src/route_handlers/: home.rs  login.rs
(+47 files in other folders)
