[package]
name = "axum-practice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio", "macros"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = "0.6.2"
