[package]
name = "rust_middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
hyper = "1.6.0"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
tower = "0.4"  # Used by Axum for middleware
